# cv

./: gen_cv.py  pyproject.toml
